# ictext

./: CMakeLists.txt  README.md
src/: append_buffer.c  editor.c  editor_config.c  error_handling.c  main.c  raw_mode.c
src/include/: append_buffer.h  defines.h  editor.h  editor_config.h  error_handling.h  raw_mode.h
